--- a/acquire-2.ipynb
+++ b/acquire-2.ipynb
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,6 +637,34 @@
    ],
    "source": [
     "get_articles(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_all_articles():\n",
+    "    base_url = 'https://inshorts.com/en/read/'\n",
+    "    topics = ['business', 'sports', 'technology', 'entertainment']\n",
+    "    article1 = []\n",
+    "    for topic in topics:\n",
+    "        topic_url = base_url + topic\n",
+    "#         print(topic_url)\n",
+    "        topic_articles = get_articles(topic_url)\n",
+    "        article1.append(topic_articles)\n",
+    "    return article1\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_all_articles()"
    ]
   },
   {
