--- a/acquire-2.ipynb
+++ b/acquire-2.ipynb
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,15 +654,150 @@
     "#         print(topic_url)\n",
     "        topic_articles = get_articles(topic_url)\n",
     "        article1.append(topic_articles)\n",
-    "    return article1\n",
+    "    article1 = sum(article1, [])  \n",
+    "    df = pd.DataFrame(article1)\n",
+    "    return df\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>content</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Father said 'if you want to blow money up, fin...</td>\n",
+       "      <td>Serum Institute of India's (SII) CEO Adar Poon...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Scientist behind '90% effective' COVID-19 vacc...</td>\n",
+       "      <td>German scientist Uğur Şahin, the CEO of BioNTe...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Russian vaccine arrives in India, video of it ...</td>\n",
+       "      <td>Russia's coronavirus vaccine, Sputnik V, has a...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>China suspends fish imports from Indian firm a...</td>\n",
+       "      <td>China has suspended imports from India's Basu ...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Special Indian version of PUBG Mobile to be la...</td>\n",
+       "      <td>South Korea's PUBG Corporation on Thursday ann...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>Grateful to Yash Chopra for making me part of ...</td>\n",
+       "      <td>Taking to Instagram on Thursday, Preity Zinta ...</td>\n",
+       "      <td>entertainment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>Asif told me Dharamshala was his go-to place f...</td>\n",
+       "      <td>Talking about late actor Asif Basra who was fo...</td>\n",
+       "      <td>entertainment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>Friends reunion being rescheduled for beginnin...</td>\n",
+       "      <td>Actor Matthew Perry, who played the role of Ch...</td>\n",
+       "      <td>entertainment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Had a horrible experience on 'Fantastic Four':...</td>\n",
+       "      <td>'Fantastic Four' actress Kate Mara has reveale...</td>\n",
+       "      <td>entertainment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>Actors like Asif don't get basic respect on se...</td>\n",
+       "      <td>Filmmaker Vivek Agnihotri, who worked with lat...</td>\n",
+       "      <td>entertainment</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>98 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                title  \\\n",
+       "0   Father said 'if you want to blow money up, fin...   \n",
+       "1   Scientist behind '90% effective' COVID-19 vacc...   \n",
+       "2   Russian vaccine arrives in India, video of it ...   \n",
+       "3   China suspends fish imports from Indian firm a...   \n",
+       "4   Special Indian version of PUBG Mobile to be la...   \n",
+       "..                                                ...   \n",
+       "93  Grateful to Yash Chopra for making me part of ...   \n",
+       "94  Asif told me Dharamshala was his go-to place f...   \n",
+       "95  Friends reunion being rescheduled for beginnin...   \n",
+       "96  Had a horrible experience on 'Fantastic Four':...   \n",
+       "97  Actors like Asif don't get basic respect on se...   \n",
+       "\n",
+       "                                              content       category  \n",
+       "0   Serum Institute of India's (SII) CEO Adar Poon...       business  \n",
+       "1   German scientist Uğur Şahin, the CEO of BioNTe...       business  \n",
+       "2   Russia's coronavirus vaccine, Sputnik V, has a...       business  \n",
+       "3   China has suspended imports from India's Basu ...       business  \n",
+       "4   South Korea's PUBG Corporation on Thursday ann...       business  \n",
+       "..                                                ...            ...  \n",
+       "93  Taking to Instagram on Thursday, Preity Zinta ...  entertainment  \n",
+       "94  Talking about late actor Asif Basra who was fo...  entertainment  \n",
+       "95  Actor Matthew Perry, who played the role of Ch...  entertainment  \n",
+       "96  'Fantastic Four' actress Kate Mara has reveale...  entertainment  \n",
+       "97  Filmmaker Vivek Agnihotri, who worked with lat...  entertainment  \n",
+       "\n",
+       "[98 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_all_articles()"
    ]
