--- a/prepare-2.ipynb
+++ b/prepare-2.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define a function named basic_clean. It should take in a string and apply some basic text cleaning to it:\n",
+    "### Define a function named basic_clean. It should take in a string and apply some basic text cleaning to it:\n",
     "\n",
     "Lowercase everything  \n",
     "Normalize unicode characters  \n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,39 +67,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ravindersingh/codeup-data-science/natural-language-processing/acquire.py:32: UserWarning: No parser was explicitly specified, so I'm using the best available HTML parser for this system (\"lxml\"). This usually isn't a problem, but if you run this code on another system, or in a different virtual environment, it may use a different parser and behave differently.\n",
-      "\n",
-      "The code that caused this warning is on line 32 of the file /Users/ravindersingh/codeup-data-science/natural-language-processing/acquire.py. To get rid of this warning, pass the additional argument 'features=\"lxml\"' to the BeautifulSoup constructor.\n",
-      "\n",
-      "  soup = BeautifulSoup(response.text)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "string = acquire.get_news_articles(urls)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'topic': 'sports',\n",
-       " 'title': 'IPL is ready for expansion: NCA head Rahul Dravid',\n",
-       " 'content': 'Former India captain Rahul Dravid, who is now the director of National Cricket Academy (NCA), has said that the IPL is ready for expansion in terms of number of teams. Dravid added, \"There are a lot of talented players who are not getting an opportunity to play.\" As per reports, a new team will be added ahead of IPL 2021.'}"
+       " 'title': \"Sachin's debut, last int'l innings were on same day 24 years apart\",\n",
+       " 'content': \"Sachin Tendulkar made his international debut on November 15, 1989, and played his last innings in international cricket on the same date 24 years later in 2013. Sachin debuted against Pakistan in Karachi, aged 16 years 205 days, becoming the youngest Indian to play a Test. In his last innings, Sachin slammed 74(118) against West Indies at Mumbai's Wankhede Stadium.\"}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,16 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Former India captain Rahul Dravid, who is now the director of National Cricket Academy (NCA), has said that the IPL is ready for expansion in terms of number of teams. Dravid added, \"There are a lot of talented players who are not getting an opportunity to play.\" As per reports, a new team will be added ahead of IPL 2021.'"
+       "\"Sachin Tendulkar made his international debut on November 15, 1989, and played his last innings in international cricket on the same date 24 years later in 2013. Sachin debuted against Pakistan in Karachi, aged 16 years 205 days, becoming the youngest Indian to play a Test. In his last innings, Sachin slammed 74(118) against West Indies at Mumbai's Wankhede Stadium.\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,23 +129,21 @@
     "    .encode('ascii', 'ignore')\\\n",
     "    .decode('utf-8', 'ignore'))\n",
     "    string = re.sub(r\"[^a-z0-9'\\s]\", '', string)\n",
-    "    return string\n",
-    "    \n",
-    "    "
+    "    return string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'former india captain rahul dravid who is now the director of national cricket academy nca has said that the ipl is ready for expansion in terms of number of teams dravid added there are a lot of talented players who are not getting an opportunity to play as per reports a new team will be added ahead of ipl 2021'"
+       "\"sachin tendulkar made his international debut on november 15 1989 and played his last innings in international cricket on the same date 24 years later in 2013 sachin debuted against pakistan in karachi aged 16 years 205 days becoming the youngest indian to play a test in his last innings sachin slammed 74118 against west indies at mumbai's wankhede stadium\""
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,6 +151,51 @@
    "source": [
     "basic_clean(article['content'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define a function named tokenize. It should take in a string and tokenize all the words in the string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tokenize(string):\n",
+    "    tokenizer = nltk.tokenize.ToktokTokenizer()\n",
+    "    return tokenizer.tokenize(string, return_str=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Sachin Tendulkar made his international debut on November 15 , 1989 , and played his last innings in international cricket on the same date 24 years later in 2013. Sachin debuted against Pakistan in Karachi , aged 16 years 205 days , becoming the youngest Indian to play a Test. In his last innings , Sachin slammed 74( 118 ) against West Indies at Mumbai ' s Wankhede Stadium .\""
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenize(article['content'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
