--- a/prepare-2.ipynb
+++ b/prepare-2.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -143,13 +143,14 @@
        "\"sachin tendulkar made his international debut on november 15 1989 and played his last innings in international cricket on the same date 24 years later in 2013 sachin debuted against pakistan in karachi aged 16 years 205 days becoming the youngest indian to play a test in his last innings sachin slammed 74118 against west indies at mumbai's wankhede stadium\""
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "basic_clean(article['content'])"
+    "article1 = basic_clean(article['content'])\n",
+    "article1"
    ]
   },
   {
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,30 +173,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Sachin Tendulkar made his international debut on November 15 , 1989 , and played his last innings in international cricket on the same date 24 years later in 2013. Sachin debuted against Pakistan in Karachi , aged 16 years 205 days , becoming the youngest Indian to play a Test. In his last innings , Sachin slammed 74( 118 ) against West Indies at Mumbai ' s Wankhede Stadium .\""
+       "\"sachin tendulkar made his international debut on november 15 1989 and played his last innings in international cricket on the same date 24 years later in 2013 sachin debuted against pakistan in karachi aged 16 years 205 days becoming the youngest indian to play a test in his last innings sachin slammed 74118 against west indies at mumbai ' s wankhede stadium\""
       ]
      },
-     "execution_count": 23,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tokenize(article['content'])"
+    "article1 = tokenize(article1)\n",
+    "article1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define a function named stem. It should accept some text and return the text after applying stemming to all the words.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def stem(string):\n",
+    "    ps = nltk.porter.PorterStemmer()\n",
+    "    stems = [ps.stem(word) for word in string.split()]\n",
+    "    return ' '.join(stems)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"sachin tendulkar made hi intern debut on novemb 15 1989 and play hi last inning in intern cricket on the same date 24 year later in 2013 sachin debut against pakistan in karachi age 16 year 205 day becom the youngest indian to play a test in hi last inning sachin slam 74118 against west indi at mumbai ' s wankh stadium\""
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "article1 = stem(article1)\n",
+    "article1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Define a function named lemmatize. It should accept some text and return the text after applying lemmatization to each word.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lemmatize(string):\n",
+    "    wnl = nltk.stem.WordNetLemmatizer()\n",
+    "    lemmas = [wnl.lemmatize(word) for word in string.split()]\n",
+    "    return ' '.join(lemmas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"sachin tendulkar made hi intern debut on novemb 15 1989 and play hi last inning in intern cricket on the same date 24 year later in 2013 sachin debut against pakistan in karachi age 16 year 205 day becom the youngest indian to play a test in hi last inning sachin slam 74118 against west indi at mumbai ' s wankh stadium\""
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lemmatize(article1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Define a function named remove_stopwords. It should accept some text and return the text after removing all the stopwords.\n",
+    "\n",
+    "This function should define two optional parameters, extra_words and exclude_words. These parameters should define any additional stop words to include, and any words that we don't want to remove."
+   ]
   },
   {
    "cell_type": "code",
