--- a/prepare-2.ipynb
+++ b/prepare-2.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -263,13 +263,14 @@
        "\"sachin tendulkar made hi intern debut on novemb 15 1989 and play hi last inning in intern cricket on the same date 24 year later in 2013 sachin debut against pakistan in karachi age 16 year 205 day becom the youngest indian to play a test in hi last inning sachin slam 74118 against west indi at mumbai ' s wankh stadium\""
       ]
      },
-     "execution_count": 39,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lemmatize(article1)"
+    "article1 = lemmatize(article1)\n",
+    "article1"
    ]
   },
   {
@@ -284,10 +285,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_stopwords(string, extra_words = '',exclude_words = ''):\n",
+    "    stopword_list = stopwords.words('english')\n",
+    "    if len(extra_words) >0:\n",
+    "        stopword_list.append(extra_words)\n",
+    "    if len(exclude_words)>0:\n",
+    "        stopword_list.remove(exclude_words)\n",
+    "    \n",
+    "    words = string.split()\n",
+    "    filtered_words = [word for word in words if word not in stopword_list]\n",
+    "    \n",
+    "    article_without_stopwords = ' '.join(filtered_words)\n",
+    "    return article_without_stopwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"sachin tendulkar made hi intern debut novemb 15 1989 play hi last inning intern cricket date 24 year later 2013 sachin debut pakistan karachi age 16 year 205 day becom youngest indian play test hi last inning sachin slam 74118 west indi mumbai ' wankh stadium\""
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_stopwords(article1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Define a function named prep_article that takes in the dictionary representing an article and returns a dictionary that looks like this:\n",
+    "{\n",
+    "'title': 'the original title'.\n",
+    "'original': original,\n",
+    "'stemmed': article_stemmed,\n",
+    "'lemmatized': article_lemmatized,\n",
+    "'clean': article_without_stopwords\n",
+    "}\n",
+    "Note that if the orignal dictionary has a title property, it should remain unchanged (same goes for the category property)."
+   ]
   }
  ],
  "metadata": {
